editor-components/call_to_action/call_to_action7/call_to_action7.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;

@keyframes fadeInFromRight {
  0% {
    opacity: 0;
    transform: translateX(25%);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.container {
  position: relative;

  &::before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
    height: 80%;
    width: 100%;
  } 

  .max-content {
    position: relative;
    z-index: 1;

    .wrapper {
      column-gap: var(--composer-gap-lg);

      .left-page {
        display: flex;

        .image-container {
          position: relative;
          width: 90%;

          .image {
            width: 100%;
            border-radius: var(--composer-border-radius-md);
            object-fit: cover;
            animation: fadeInFromRight 1s ease-out forwards;

            &.no-animation {
              animation: unset;
            }
          }

          .overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: var(--composer-overlay-color);
            z-index: 0;
            pointer-events: none;
            border-radius: var(--composer-border-radius-md);
          }
        }
      }

      .right-page {
        .right-content {
          height: 100%;
          display: flex;
          flex-direction: column;
          justify-content: center;

          .title, .subtitle, .description {
            content: "";
          }

          .input-button-wrapper {
            display: flex;
            width: 100%;
            align-items: stretch;
            gap: var(--composer-gap-md);

            .input-div {
              display: flex;
              position: relative;

              .input {
                flex: 5;
                height: auto;
                border-style: none;
                outline: none;
                transition: border-color 0.3s ease;
                width: 100%;
                padding: var(--composer-gap-md);
                border-radius: var(--composer-border-radius-sm);
                background-color: var(--composer-html-background);
                color: var(--composer-font-color-primary);

                &::placeholder {
                  font-size: 1rem;
                  color: var(--composer-font-color-primary);
                }

                &:focus::placeholder {
                  opacity: 0.5;
                }
              }

              .error {
                position: absolute;
                bottom: -20px;
                left: 0;
                color: var(--warning);
              }

              .button {
                content: "";
                .button-text {
                  content: "";
                }
              }
            }
          }
        }
      }
    }
  }

  &:not(.no-image) {
    .max-content {
      .wrapper {
        .right-page {
          .right-content {
            .title, .subtitle, .description {
              margin-left: 0;
              text-align: left;
            }
          }
        }
      }
    }
  }

  &.no-image {
    &::before {
      height: 100%;
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .wrapper {
        flex-direction: column-reverse;

        .right-page {
          .right-content {
            .input-button-wrapper {
              .input-div {
                flex-direction: column;

                .input {
                  flex: 1;
                }

                .button {
                  flex: 1;
                }
              }
            }
          }
        }
      }
    }
  }
}

